<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_splash"
        android:padding="12dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/emiya_md_main"
            app:civ_border_width="2dp"
            android:src="@drawable/emiya_md"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <TextView
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:fontFamily="@font/nexabold"
            android:textColor="#ffffff"
            android:text="@string/name_main"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/emiya_md_main"
            android:id="@+id/textview01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textview02"
            android:layout_marginTop="2dp"
            android:textSize="24sp"
            android:fontFamily="@font/nexabold"
            android:textColor="#ffffff"
            android:text="@string/role_main"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/emiya_md_main"
            android:layout_below="@+id/textview01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/view001"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/emiya_md_main"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"/>

        <RelativeLayout
            android:id="@+id/rrAnimeList"
            android:padding="10dp"
            android:background="@drawable/grid_main"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/view001"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:scaleType="fitXY"
                android:src="@drawable/anime_list"
                android:id="@+id/ivAnime"
                android:layout_centerHorizontal="true"
                android:layout_width="210dp"
                android:layout_height="150dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tvAnime"
                android:layout_marginTop="5dp"
                android:textSize="24sp"
                android:fontFamily="@font/nexabold"
                android:textColor="#ffffff"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/ivAnime"
                android:text="@string/anime_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rrTugasList"
            android:padding="10dp"
            android:background="@drawable/grid_main"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/rrAnimeList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:scaleType="fitXY"
                android:src="@drawable/list_tugas"
                android:id="@+id/ivTugas"
                android:layout_centerHorizontal="true"
                android:layout_width="210dp"
                android:layout_height="150dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tvTugas"
                android:layout_marginTop="5dp"
                android:textSize="24sp"
                android:fontFamily="@font/nexabold"
                android:textColor="#ffffff"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/ivTugas"
                android:text="@string/tugas_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rrComingSoon"
            android:padding="10dp"
            android:background="@drawable/grid_main"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/rrTugasList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:scaleType="fitXY"
                android:src="@drawable/coming_soon"
                android:id="@+id/ivComingSoon"
                android:layout_centerHorizontal="true"
                android:layout_width="210dp"
                android:layout_height="150dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tvComingSoon"
                android:layout_marginTop="5dp"
                android:textSize="24sp"
                android:fontFamily="@font/nexabold"
                android:textColor="#ffffff"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/ivComingSoon"
                android:text="@string/coming_soon_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>

